tests/paczka1/fuzzy1/31984641.err
Error in line 10: QDUKSAJXT S380 4,7
Error in line 9: 2l5uS S882 228,6
